Add Orion Line icons

--- a/icon-demo.njk
+++ b/icon-demo.njk
@@ -499,28 +499,28 @@ layout: base
 <h2>https://orioniconlibrary.com/icon-pack/interface?style=solid</h2>
 <ul>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-real-estate"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-real-estate"></use></svg>
         <span>Home</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-recording"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-recording"></use></svg>
         <span>Episodes</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-microphone"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-microphone"></use></svg>
         <span>Episodes</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-rss"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-rss"></use></svg>
         <span>Subscribe</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-user-group"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-user-group"></use></svg>
         <span>About</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-flame"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-flame"></use></svg>
         <span>Latest</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-lightning-bolt"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-lightning-bolt"></use></svg>
         <span>Latest</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-new-badge"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-new-badge"></use></svg>
         <span>Latest</span>
     <li>
         <svg class="icon icon-heart"><use xlink:href="#icon-orion-solid-diploma"></use></svg>
@@ -532,25 +532,25 @@ layout: base
         <svg class="icon"><use xlink:href="#icon-orion-solid-hearts"></use></svg>
         <span>Recommended</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-rss"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-rss"></use></svg>
         <span>RSS</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-mail"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-mail"></use></svg>
         <span>tto@koser.us</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-pause"></use></svg>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-play"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-pause"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-play"></use></svg>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-podcast"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-podcast"></use></svg>
         <span>Podcast by Melissa &amp; Brian Koser</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-data-app"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-data-app"></use></svg>
         <span>Website by Brian Koser</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-set-square"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-set-square"></use></svg>
         <span>Website by Brian Koser</span>
     <li>
-        <svg class="icon icon-orion-solid"><use xlink:href="#icon-orion-solid-pen"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-solid-pen"></use></svg>
         <span>Logo by Matt Koser</span>
 </ul>
 
@@ -673,6 +673,251 @@ layout: base
                 ></path>
                 <path data-name="layer1" d="M53.7 44c-8-1.6-7.7-4.8-7.7-6.4V36a56.7 56.7 0 0 0 12.8-1.6c-3.3-3.3-6.4-4.7-6.4-18.5 0-16.3-16-11.2-16-11.2a8.4 8.4 0 0 0-7.3 3.6 13.6 13.6 0 0 1 8.8 5.2c2.7 3.5 3.5 8.3 2.4 13.6a11.6 11.6 0 0 1 1 4.7c0 2-.8 6.9-3.9 8.9a18.6 18.6 0 0 1-3.2 5.4 12.1 12.1 0 0 0 4.3 1.2 12.5 12.5 0 0 1 8.8 4.7H62s0-6.3-8.3-8z"
                 ></path>
+        </symbol>
+    </defs>
+</svg>
+</div>
+
+
+
+
+
+
+<div class="icon-demo icon-demo-orion-line">
+<h1>Orion Line</h1>
+<h2>https://orioniconlibrary.com/icon-pack/interface?style=line</h2>
+<ul>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-property"></use></svg>
+        <span>Home</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-recording"></use></svg>
+        <span>Episodes</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-microphone"></use></svg>
+        <span>Episodes</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-rss"></use></svg>
+        <span>Subscribe</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-user-group"></use></svg>
+        <span>About</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-flame"></use></svg>
+        <span>Latest</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-lightning-bolt"></use></svg>
+        <span>Latest</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-new-badge"></use></svg>
+        <span>Latest</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-diploma"></use></svg>
+        <span>Recommended</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-star"></use></svg>
+        <span>Recommended</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-hearts"></use></svg>
+        <span>Recommended</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-rss"></use></svg>
+        <span>RSS</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-mail"></use></svg>
+        <span>tto@koser.us</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-pause"></use></svg>
+        <svg class="icon"><use xlink:href="#icon-orion-line-play"></use></svg>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-podcast"></use></svg>
+        <span>Podcast by Melissa &amp; Brian Koser</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-data-app"></use></svg>
+        <span>Website by Brian Koser</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-set-square"></use></svg>
+        <span>Website by Brian Koser</span>
+    <li>
+        <svg class="icon"><use xlink:href="#icon-orion-line-pen"></use></svg>
+        <span>Logo by Matt Koser</span>
+</ul>
+
+<svg style="position:absolute; width:0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+        <symbol id="icon-orion-line-data-app" viewBox="0 0 64 64">
+            <title>orion-line-data-app</title>
+            <path d="M2 23v22l30.082 14L62 45V23L32 37.048 2 23zm30 14.048V59m25.332-38.178L62 23M37.459 11.548l9.148 4.269m-29.232.009l9.147-4.27M2 23l4.742-2.213"
+                 stroke-linejoin="round" stroke-linecap="round" 
+                fill="none" data-name="layer2"></path>
+                <ellipse  stroke-linejoin="round" stroke-linecap="round"
+                 fill="none" ry="4" rx="7" cy="19" cx="13" data-name="layer1"></ellipse>
+                <ellipse  stroke-linejoin="round" stroke-linecap="round"
+                 fill="none" ry="4" rx="7" cy="25" cx="32" data-name="layer1"></ellipse>
+                <ellipse  stroke-linejoin="round" stroke-linecap="round"
+                 fill="none" ry="4" rx="7" cy="9" cx="32" data-name="layer1"></ellipse>
+                <ellipse  stroke-linejoin="round" stroke-linecap="round"
+                 fill="none" ry="4" rx="7" cy="19" cx="51" data-name="layer1"></ellipse>
+        </symbol>
+        <symbol id="icon-orion-line-diploma" viewBox="0 0 64 64">
+            <title>orion-line-diploma</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M17.6 37.7L10 56.4l8.8-1.1 5.5 6.8 6.4-18.6m15.7-5.8L54 56.4l-8.8-1.1-5.4 6.8-6.5-18.6"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <circle data-name="layer1" cx="32" cy="22.9" r="12" fill="none"
+                 stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></circle>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M32 4.5l4.5-2.6 3.1 4.2 5.1-.5 1.1 5 4.9 1.7-1 5 3.8 3.5-3 4.2 2.1 4.8-4.5 2.6v5.1l-5.2.6-2.1 4.7-4.9-1.5-3.9 3.4-3.9-3.4-4.9 1.5-2.1-4.7-5.2-.6v-5.1l-4.5-2.6 2.1-4.8-3-4.2 3.8-3.5-1-5 4.9-1.7 1.1-5 5.1.5 3.1-4.2L32 4.5z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-flame" viewBox="0 0 64 64">
+            <title>orion-line-flame</title>
+            <path data-name="layer1"
+                d="M50 14c-6.9 6.1-6 16-6 16S33.8 14.5 38 2c-4.1 8.4-22 10.6-14 34-10.1-3.8-10-16-10-16s-6 6-6 18a24 24 0 0 0 48 0c0-12.2-8.7-12.1-6-24z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-hearts" viewBox="0 0 64 64">
+            <title>orion-line-hearts</title>
+            <path data-name="layer2"
+                d="M46.7 29.3A24.5 24.5 0 0 0 50 17.2 12.1 12.1 0 0 0 38 5a12.9 12.9 0 0 0-12 8.1A12.9 12.9 0 0 0 14 5 12.1 12.1 0 0 0 2 17.2c0 11.4 8.8 22 24 31.8l3.7-2.5"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" d="M53 27a9.7 9.7 0 0 0-9 5.9 9.7 9.7 0 0 0-9-5.9 8.9 8.9 0 0 0-9 8.9c0 8.3 6.6 16 18 23.1 11.4-7.1 18-14.8 18-23.1a8.9 8.9 0 0 0-9-8.9z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-lightning-bolt" viewBox="0 0 64 64">
+            <title>orion-line-lightning-bolt</title>
+            <path data-name="layer1"
+                fill="none"  stroke-miterlimit="10"  d="M23.7 5.5h22l-11.1 20h13.1l-25.6 33 6-23H16.3l7.4-30z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-mail" viewBox="0 0 64 64">
+            <title>orion-line-mail</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M2 12l30 29 30-29M42 31.6L62 52M2 52l20-20.4"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M2 12h60v40H2z" stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-microphone" viewBox="0 0 64 64">
+            <title>orion-line-microphone</title>
+            <path data-name="layer2"
+                d="M41 32a10 10 0 0 1-10 10 10 10 0 0 1-10-10V12A10 10 0 0 1 31 2a10 10 0 0 1 10 10z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" d="M49 22v10a18 18 0 0 1-18 18 18 18 0 0 1-18-18V22m18 28v12m-10 0h20"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-new-badge" viewBox="0 0 64 64">
+            <title>orion-line-new-badge</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M12 39V26l7.9 12h.1V25m14 1h-8v12h8m-2-6h-6m12-7l3.4 13h.4l3.6-10h1.1l3.3 10h.6L54 25"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M32 4.5L38 2l4.5 4.6H49l2.5 5.9 5.9 2.5v6.5L62 26l-2.5 6 2.5 6-4.6 4.5V49l-5.9 2.5-2.5 5.9h-6.5L38 62l-6-2.5-6 2.5-4.5-4.6H15l-2.5-5.9L6.6 49v-6.5L2 38l2.5-6L2 26l4.6-4.5V15l5.9-2.5L15 6.6h6.5L26 2l6 2.5z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-pause" viewBox="0 0 64 64">
+            <title>orion-line-pause</title>
+            <circle data-name="layer2"
+                cx="32" cy="32" r="30" fill="none"  stroke-miterlimit="10"
+                 stroke-linejoin="round" stroke-linecap="round"></circle>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M36 20h4v24h-4zm-12 0h4v24h-4z" stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-pen" viewBox="0 0 64 64">
+            <title>orion-line-pen</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M9.7 54.3l-7.6 7.6m15.1-10.8a6.5 6.5 0 0 0-4.3-4.3 6 6 0 0 1-5.6.9l-.9.7-.5.7a6.4 6.4 0 0 0-1 1.9c-1.8 4.2-2.8 10.9-2.8 10.9s6.8-.9 11-2.7a6.5 6.5 0 0 0 1.7-1l.7-.6.7-.9a6 6 0 0 1 1-5.6z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <path data-name="layer1" d="M61.1 6.9l-36 40.4a6 6 0 1 1-9-8l.5-.5L57 2.8a2.8 2.8 0 0 1 4 4z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-play" viewBox="0 0 64 64">
+            <title>orion-line-play</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M24 18l24 14-24 14V18z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <circle data-name="layer1" cx="32" cy="32" r="30" fill="none" 
+                stroke-miterlimit="10"  stroke-linejoin="round" stroke-linecap="round"></circle>
+        </symbol>
+        <symbol id="icon-orion-line-podcast" viewBox="0 0 64 64">
+            <title>orion-line-podcast</title>
+            <path data-name="layer2"
+                d="M44 22.6a15.9 15.9 0 0 0 1-5.6c0-8.3-6.3-15-14-15S17 8.7 17 17a15.3 15.3 0 0 0 6.1 12.4A24.1 24.1 0 0 0 7 52h40"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M47 50v12m8 0H39m16-20a8 8 0 0 1-8 8 8 8 0 0 1-8-8V30a8 8 0 0 1 8-8 8 8 0 0 1 8 8z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-property" viewBox="0 0 64 64">
+            <title>orion-line-property</title>
+            <path data-name="layer2"
+                fill="none"  stroke-linecap="round" stroke-miterlimit="10"
+                 d="M54 22.6V8h-9v7.445M40 62h14V29.769M10 30v32h14" stroke-linejoin="round"></path>
+                <circle data-name="layer2" cx="32" cy="29" r="5" fill="none" 
+                stroke-linecap="round" stroke-miterlimit="10"  stroke-linejoin="round"></circle>
+                <path data-name="layer1" fill="none"  stroke-linecap="round"
+                stroke-miterlimit="10"  d="M24 42h16v20H24zm8-37L2.436 28.651a.5.5 0 0 0-.036.749l3.287 3.287a.5.5 0 0 0 .668.035L32 12l25.65 20.718a.5.5 0 0 0 .668-.035l3.287-3.283a.5.5 0 0 0-.041-.744z"
+                stroke-linejoin="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-recording" viewBox="0 0 64 64">
+            <title>orion-line-recording</title>
+            <path data-name="layer2"
+                d="M42 32a10 10 0 0 1-10 10 10 10 0 0 1-10-10V12A10 10 0 0 1 32 2a10 10 0 0 1 10 10z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" d="M50 22v10a18 18 0 0 1-18 18 18 18 0 0 1-18-18V22m18 28v12m-10 0h20M14 26h36"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-rss" viewBox="0 0 64 64">
+            <title>orion-line-rss</title>
+            <path data-name="layer2"
+                d="M10.063 45.824a8.088 8.088 0 1 0 8.063 8.088 8.075 8.075 0 0 0-8.063-8.088z"
+                fill="none"  stroke-linecap="round" stroke-miterlimit="10"
+                 stroke-linejoin="round"></path>
+                <path data-name="layer1" d="M2.656 22.219h-.469v11.192h.469a27.971 27.971 0 0 1 27.938 27.931V62H41.75v-.658A39.111 39.111 0 0 0 2.656 22.219z"
+                fill="none"  stroke-linecap="round" stroke-miterlimit="10"
+                 stroke-linejoin="round"></path>
+                <path data-name="layer1" d="M2.656 2h-.469v11.191h.469A48.188 48.188 0 0 1 50.75 61.342V62H62v-.658A59.408 59.408 0 0 0 2.656 2z"
+                fill="none"  stroke-linecap="round" stroke-miterlimit="10"
+                 stroke-linejoin="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-set-square" viewBox="0 0 64 64">
+            <title>orion-line-set-square</title>
+            <path data-name="layer2"
+                fill="none"  stroke-miterlimit="10"  d="M60.6 60.6H3.4V3.4l57.2 57.2z"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+                <path data-name="layer2" fill="none"  stroke-miterlimit="10"
+                 d="M37.4 52.6h-26v-26l26 26z" stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" fill="none"  stroke-miterlimit="10"
+                 d="M9.4 15.8l3.2-3.2m3.2 9.7l3.3-3.2m3.2 9.6l3.2-3.2m3.3 9.7L32 32m3.3 9.7l3.2-3.2m3.2 9.7l3.2-3.3m3.3 9.7l3.2-3.2"
+                stroke-linejoin="round" stroke-linecap="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-star" viewBox="0 0 64 64">
+            <title>orion-line-star</title>
+            <path d="M32 48L15 58l4-19L5 26l19-2 8-18 8 18 19 2-14 13 4 19-17-10z"
+                 stroke-miterlimit="10" stroke-linecap="round" 
+                fill="none" data-name="layer1" stroke-linejoin="round"></path>
+        </symbol>
+        <symbol id="icon-orion-line-user-group" viewBox="0 0 64 64">
+            <title>orion-line-user-group</title>
+            <path data-name="layer2"
+                d="M27.4 12.2c.9-3.3 3.2-7.4 9-7.4 0 0 16-5.1 16 11.2 0 13.7 3.1 15.2 6.4 18.5A56.6 56.6 0 0 1 46 36v1.6c0 1.6-.3 4.8 7.7 6.4s8.3 8 8.3 8H41"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
+                <path data-name="layer1" d="M38.1 51.2c-8-1.1-8-4-8-5.6v-.9a14.6 14.6 0 0 0 4.2-7c2.4 0 3-5.1 3-5.8s-.2-3.6-1.3-3.9c4-14-8-20-18.4-12.8-4.4 0-5.8 6.4-4.2 12.8-1.1 0-1.3 3-1.3 3.8s.6 5.8 3 5.8c.8 2.9 3 5.3 4.9 7v1c0 1.6-.6 4.6-8.7 5.6S2 60 2 60h44s.1-7.7-7.9-8.8z"
+                fill="none"  stroke-miterlimit="10"  stroke-linejoin="round"
+                stroke-linecap="round"></path>
         </symbol>
     </defs>
 </svg>
