--- a/css/site.css
+++ b/css/site.css
@@ -387,7 +387,13 @@ kbd kbd {
 }
 
 .icon-demo-md,
-.icon-demo-orion-solid {
+.icon-demo-orion-solid,
+.icon-demo-orion-line {
     background-color: rgb(255, 83, 73);
     color: white;
+}
+
+.icon-demo-orion-line {
+    stroke: white;
+    stroke-width: 3;
 }
