--- a/icon-demo.njk
+++ b/icon-demo.njk
@@ -923,4 +923,93 @@ layout: base
 </svg>
 </div>
 
+
+
+
+
+
+<div class="icon-demo icon-demo-icons8-windows">
+<h1>Icons8 Windows 10</h1>
+<h2>https://icons8.com/icons/windows</h2>
+<ul>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-home-100-2.png" alt="home" class="icon-png">
+        </div>
+        <span>Home</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-browse-podcasts-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Episodes</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-rss-logo-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Subscribe</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-rss-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Subscribe</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-couple-100.png" alt="home" class="icon-png">
+        </div>
+        <span>About</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-new-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Latest</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-heart-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Recommended</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-rss-logo-100.png" alt="home" class="icon-png">
+        </div>
+        <span>RSS</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-rss-100.png" alt="home" class="icon-png">
+        </div>
+        <span>RSS</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-envelope-100.png" alt="home" class="icon-png">
+        </div>
+        <span>tto@koser.us</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-email-100.png" alt="home" class="icon-png">
+        </div>
+        <span>tto@koser.us</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-pause-button-100.png" alt="home" class="icon-png">
+        </div>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-circled-play-100.png" alt="home" class="icon-png">
+        </div>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-microphone-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Podcast by Melissa &amp; Brian Koser</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-fantasy-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Website by Brian Koser</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/icons8-paint-palette-100.png" alt="home" class="icon-png">
+        </div>
+        <span>Logo by Matt Koser</span>
+</ul>
+</div>
+
 </div>
