--- a/icon-demo.njk
+++ b/icon-demo.njk
@@ -1091,4 +1091,83 @@ layout: base
 </ul>
 </div>
 
+
+
+
+
+
+<div class="icon-demo icon-demo-icons8-cute-outline">
+<h1>Icons8 Cute Outline</h1>
+<h2>https://icons8.com/icons/cute-outline</h2>
+<ul>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-home.png" alt="home" class="icon-png">
+        </div>
+        <span>Home</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-microphone.png" alt="home" class="icon-png">
+        </div>
+        <span>Episodes</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-rss.png" alt="home" class="icon-png">
+        </div>
+        <span>Subscribe</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-couple.png" alt="home" class="icon-png">
+        </div>
+        <span>About</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-new.png" alt="home" class="icon-png">
+        </div>
+        <span>Latest</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-heart.png" alt="home" class="icon-png">
+        </div>
+        <span>Recommended</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-rss.png" alt="home" class="icon-png">
+        </div>
+        <span>RSS</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-envelope.png" alt="home" class="icon-png">
+        </div>
+        <span>tto@koser.us</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-email.png" alt="home" class="icon-png">
+        </div>
+        <span>tto@koser.us</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-pause-button.png" alt="home" class="icon-png">
+        </div>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-circled-play.png" alt="home" class="icon-png">
+        </div>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-microphone.png" alt="home" class="icon-png">
+        </div>
+        <span>Podcast by Melissa &amp; Brian Koser</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-fantasy.png" alt="home" class="icon-png">
+        </div>
+        <span>Website by Brian Koser</span>
+    <li>
+        <div class="icon-container">
+            <img src="/icons/icons8/cute-outline/icons8-paint-palette.png" alt="home" class="icon-png">
+        </div>
+        <span>Logo by Matt Koser</span>
+</ul>
+</div>
+
 </div>
