--- a/css/site.css
+++ b/css/site.css
@@ -140,6 +140,26 @@ body, .body {
     margin-bottom: 0;
     font-variant-ligatures: common-ligatures;
     font-variant-numeric: oldstyle-nums;
+
+    display: grid;
+    grid-template-columns: .5rem 1fr .5rem;
+    grid-template-areas: 
+        "header         header  header" 
+        "gutter-left    main    gutter-right" 
+        "footer         footer  footer";
+    row-gap: 1.3rem;
+}
+
+body > header {
+    grid-area: header;
+}
+
+body > main {
+    grid-area: main;
+}
+
+body > footer {
+    grid-area: footer;
 }
 
 p,
@@ -407,4 +427,72 @@ kbd kbd {
 	font-size: 24px;
 	height: 1em;
 	width: 1.3em;
+}
+
+
+
+
+
+
+/*
+    SITE NAV
+*/
+.header-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+}
+
+nav[role=navigation] {
+    -webkit-transition: all 0.3s ease-out;  
+       -moz-transition: all 0.3s ease-out;
+        -ms-transition: all 0.3s ease-out;
+         -o-transition: all 0.3s ease-out;
+            transition: all 0.3s ease-out;
+}
+
+.js nav[role=navigation] {
+    overflow: hidden;
+    max-height: 0;
+}
+
+nav[role=navigation].active {
+    max-height: 15em;
+}
+
+nav[role=navigation] ul {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid #808080;
+}
+
+nav[role=navigation] li a {
+    display: block;
+    padding: 0.8em;
+    border-bottom: 1px solid #808080;
+}
+  
+@media screen and (min-width: 48.25em) {
+    a.menu-link {
+        display: none;
+    }
+
+    .js nav[role=navigation] {
+        max-height: none;
+    }
+
+    nav[role=navigation] ul {
+        margin: 0 0 0 -0.25em;
+        border: 0;
+    }
+    
+    nav[role=navigation]  li {
+        display: inline-block;
+        margin: 0 0.25em;
+    }
+
+    nav[role=navigation] li a {
+        border: 0;
+    }
 }
